--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div v-if="!httpError">
           <h1 v-if="!isLoading" >{{email}}</h1>
           <h2 v-else >loading....</h2>
+          <button @click="getEmail" class="btn btn-info">chiama email</button>
         </div>
         <div v-else>
           <h1>ERRORE!</h1>
